--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,11 @@ jobs:
       - name: Build the package
         run: npm run build
 
-      - uses: saucelabs/sauce-connect-action@v1.1.1
+      - name: Setup browser testing
+        uses: browserstack/github-actions@master
         with:
-          username: ${{ secrets.SAUCE_USERNAME }}
-          accessKey: ${{ secrets.SAUCE_ACCESS_KEY }}
+          username: ${{ secrets.BROWSERSTACK_USERNAME }}
+          accessKey: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
           tunnelIdentifier: $GITHUB_RUN_ID
 
       - name: Run tests with code coverage
