Build without --progress flag before running tests

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --config webpack.dev.js",
     "dev": "webpack --config webpack.dev.js --progress",
     "build": "webpack --config webpack.umd.js --progress",
-    "pretest": "npm run build",
+    "pretest": "webpack --config webpack.umd.js",
     "test": "karma start"
   },
   "repository": {
