Set `master` as default branch for the CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,7 @@ name: CI
 on:
   push:
     branches:
-      - github-actions
-      - browser-testing-migration
+      - master
 
   pull_request:
     branches:
