--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/mo.js",
   "unpkg": "dist/mo.umd.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js",
-    "dev": "webpack --config webpack.dev.js --progress",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.umd.js --progress",
     "pretest": "webpack --config webpack.umd.js",
     "test": "karma start"
