--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "coffeescript": "^1.12.7",
     "coveralls": "^3.1.0",
     "create-file-webpack": "^1.0.2",
+    "eslint": "^7.11.0",
     "jasmine": "^3.6.1",
     "karma": "^5.2.3",
     "karma-babel-preprocessor": "^8.0.1",
