--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@mojs/core",
   "version": "0.288.2",
   "description": "The motion graphics toolbelt for the web",
+  "source": "src/mojs.babel.js",
   "main": "dist/mo.umd.js",
+  "browser": "dist/mo.umd.js",
   "unpkg": "dist/mo.umd.js",
   "scripts": {
     "lint": "eslint \"**/*.js\"",
