Upgrade to webpack 5

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "unpkg": "dist/mo.umd.js",
   "scripts": {
     "lint": "eslint \"**/*.js\"",
-    "dev": "webpack-dev-server --config webpack.dev.js",
+    "dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.umd.js --progress",
     "pretest": "webpack --config webpack.umd.js",
     "test": "karma start"
@@ -43,12 +43,12 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@mojs/player": "^0.43.16",
     "babel-loader": "^8.2.2",
-    "coffee-loader": "^1.0.1",
+    "coffee-loader": "^2.0.0",
     "coffeeify": "^3.0.1",
     "coffeescript": "^1.12.7",
     "coveralls": "^3.1.0",
-    "create-file-webpack": "^1.0.2",
     "eslint": "^7.16.0",
     "jasmine": "^3.6.2",
     "karma": "^5.2.3",
@@ -61,9 +61,9 @@
     "karma-jasmine": "^4.0.1",
     "karma-summary-reporter": "^1.9.0",
     "puppeteer": "^5.5.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
     "webpack-merge": "^5.7.3"
   },
