--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "coffeescript": "^1.12.7",
     "coveralls": "^3.1.0",
     "eslint": "^7.21.0",
+    "eslint-webpack-plugin": "^2.5.2",
     "jasmine": "^3.6.4",
     "karma": "^6.1.1",
     "karma-babel-preprocessor": "^8.0.1",
