--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "url": "https://github.com/mojs/mojs/issues"
   },
   "homepage": "https://github.com/mojs/mojs",
+  "engines": {
+    "node": "^18",
+    "npm": "^8"
+  },
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/plugin-transform-runtime": "^7.19.6",
