--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,12 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - main
       - dev
 
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
