--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.21.0"
+    "@babel/runtime": "^7.21.0",
+    "stylelint-webpack-plugin": "^4.1.0"
   }
 }
