--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "coveralls": "^3.1.1",
     "eslint": "^8.57.1",
     "eslint-webpack-plugin": "^4.2.0",
+    "globals": "^17.3.0",
     "jasmine": "^6.0.0",
     "karma": "^6.4.4",
     "karma-babel-preprocessor": "^8.0.2",
