--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/core": "^7.29.0",
     "@babel/plugin-transform-runtime": "^7.29.0",
     "@babel/preset-env": "^7.29.0",
+    "@eslint/js": "^9.39.2",
     "@mojs/player": "^1.3.0",
     "babel-loader": "^9.2.1",
     "coffee-loader": "^5.0.0",
