--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-env": "^7.29.0",
     "@eslint/js": "^9.39.2",
     "@mojs/player": "^1.3.0",
+    "@stylistic/eslint-plugin": "^5.8.0",
     "babel-loader": "^9.2.1",
     "coffee-loader": "^5.0.0",
     "coffeeify": "^3.0.1",
